--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Groove Transformer # the website title (if blank, full name will be used instead)
-first_name: Groove
+title: Ayaiay # the website title (if blank, full name will be used instead)
+first_name: Ay
 middle_name:
-last_name: Transformer
-email: groovetransformer@gmail.com
+last_name: aiay
+email: ayaiay@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
    
 footer_text: >
@@ -17,7 +17,7 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your o
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://groovetransformer.github.io # the base hostname & protocol for your site
+url: https://ayaiay.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -123,7 +123,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: GrooveTransformer # blog_name will be displayed in your blog page
+blog_name: ayaiay # blog_name will be displayed in your blog page
 blog_description: a simple whitespace theme for academics
 permalink: /blog/:year/:title/
 
@@ -151,7 +151,7 @@ giscus:
   lang: en
 
 # Disqus comments (DEPRECATED)
-disqus_shortname: GrooveTransformer # put your disqus shortname
+disqus_shortname: ayaiay # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
