--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Ayaiay # the website title (if blank, full name will be used instead)
+title: Ayaiaiy # the website title (if blank, full name will be used instead)
 first_name: Ay
 middle_name:
 last_name: aiay
